--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sadd</groupId>
-	<artifactId>Sadd</artifactId>
+	<artifactId>sadd-spring-web-boot</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Sadd</name>
+	<name>sadd-spring-web-boot</name>
 	<packaging>war</packaging>
 	<dependencyManagement>
 		<dependencies>
